[gd_scene load_steps=19 format=1]

[ext_resource path="res://scripts/Hud.gd" type="Script" id=1]
[ext_resource path="res://images/Potions4X_11.png" type="Texture" id=2]
[ext_resource path="res://images/Potions4X_00.png" type="Texture" id=3]
[ext_resource path="res://images/Potions4X_10.png" type="Texture" id=4]
[ext_resource path="res://images/Potions4X_05.png" type="Texture" id=5]
[ext_resource path="res://images/Potions4X_04.png" type="Texture" id=6]
[ext_resource path="res://images/Potions4X_08.png" type="Texture" id=7]
[ext_resource path="res://images/Potions4X_07.png" type="Texture" id=8]
[ext_resource path="res://images/Potions4X_14.png" type="Texture" id=9]
[ext_resource path="res://images/Potions4X_13.png" type="Texture" id=10]
[ext_resource path="res://images/Key_0.png" type="Texture" id=11]
[ext_resource path="res://Sounds/bottle.smp" type="Sample" id=12]
[ext_resource path="res://Sounds/bite-small2.smp" type="Sample" id=13]
[ext_resource path="res://Sounds/bubble3.smp" type="Sample" id=14]
[ext_resource path="res://images/Heart_1.png" type="Texture" id=15]
[ext_resource path="res://images/Heart_0.png" type="Texture" id=16]

[sub_resource type="SampleLibrary" id=1]

samples/bottle = {
"db": -5.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 12 )
}
samples/useKey = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 13 )
}
samples/usePotion = {
"db": -10.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 14 )
}

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "Grey",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "Red",
"speed": 5.0
} ]

[node name="Hud" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 524.0
margin/right = -5.0
margin/bottom = -1.0

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 50.0
margin/top = 530.0
margin/right = 90.0
margin/bottom = 544.0
text = "Die"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 160.0
margin/top = 530.0
margin/right = 200.0
margin/bottom = 544.0
text = "Faster"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 270.0
margin/top = 530.0
margin/right = 310.0
margin/bottom = 544.0
text = "Jump"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label3" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 370.0
margin/top = 530.0
margin/right = 423.0
margin/bottom = 544.0
text = "Health"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label4" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 480.0
margin/top = 530.0
margin/right = 522.0
margin/bottom = 544.0
text = "Key"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="redLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 50.0
margin/top = 580.0
margin/right = 90.0
margin/bottom = 594.0
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="greenLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 160.0
margin/top = 580.0
margin/right = 200.0
margin/bottom = 594.0
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="yellowLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 270.0
margin/top = 580.0
margin/right = 310.0
margin/bottom = 594.0
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="purpleLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 380.0
margin/top = 580.0
margin/right = 420.0
margin/bottom = 594.0
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="keyLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 480.0
margin/top = 580.0
margin/right = 520.0
margin/bottom = 594.0
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RedButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 46.0
margin/top = 526.0
margin/right = 94.0
margin/bottom = 574.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 2 )
textures/pressed = ExtResource( 3 )
textures/hover = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="GreenButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 156.0
margin/top = 527.0
margin/right = 204.0
margin/bottom = 575.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 3 )
textures/hover = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="YellowButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 267.0
margin/top = 526.0
margin/right = 315.0
margin/bottom = 574.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 3 )
textures/hover = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="PurpleButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 376.0
margin/top = 526.0
margin/right = 424.0
margin/bottom = 574.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 3 )
textures/hover = ExtResource( 10 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 500, 560 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 11 )

[node name="SFX" type="SamplePlayer" parent="."]

config/polyphony = 3
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="potion_sound_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.7
one_shot = true
autostart = false

[node name="Label 2" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 560.0
margin/top = 528.0
margin/right = 681.0
margin/bottom = 542.0
text = "Power Up Time Left"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PowerUpTImeLeft" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 604.0
margin/top = 554.0
margin/right = 644.0
margin/bottom = 568.0
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Heart1" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 762, 562 )
frames = SubResource( 2 )
animation = "Red"

[node name="Heart2" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 832, 562 )
frames = SubResource( 2 )
animation = "Red"

[node name="Heart3" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 912, 562 )
frames = SubResource( 2 )
animation = "Red"

[node name="Heart4" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 982, 562 )
frames = SubResource( 2 )
animation = "Grey"

[connection signal="pressed" from="RedButton" to="." method="_on_button_pressed" binds= [ 2 ]]

[connection signal="pressed" from="GreenButton" to="." method="_on_button_pressed" binds= [ 0 ]]

[connection signal="pressed" from="YellowButton" to="." method="_on_button_pressed" binds= [ 1 ]]

[connection signal="pressed" from="PurpleButton" to="." method="_on_button_pressed" binds= [ 3 ]]

[connection signal="timeout" from="potion_sound_timer" to="." method="_on_potion_sound_timer_timeout"]


